tests/fixtures/type_checker/error/return_expected_value.galaxy
int return_expected_value()
{
    return;
}
